--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
               run: npm run build
 
             - name: Generate compressed package
-              run: cd ./dist && zip -r stable-diffusion-png-extractor.eagleplugin *
+              run: cd ./dist && zip -r stable-diffusion-png-extractor.eagleplugin * && cd ..
 
             - name: Upload build artifacts
               uses: actions/upload-artifact@v4
